Fix for "Too wide on narrow screens"
We resolve this by clamping the main article and main-body to 100% of
parent container.  This avoids it expanding the screen beyond the size
of the viewport.

Closes #2

--- a/layouts/partials/scss/real-scss/default-body.scss
+++ b/layouts/partials/scss/real-scss/default-body.scss
@@ -25,6 +25,7 @@
   flex-flow: row wrap;
   line-height: 1.5;
   margin: 0;
+  max-width: 100%;
   order: 2;
   padding: 0;
   text-align: left;
@@ -32,7 +33,8 @@
 
 .main-body {
   display: block;
-  flex: 3 1 50%;
+  flex: 1 4 50%;
+  max-width: 100%;
   order: 1;
   padding-left: .8em;
   padding-right: .8em;
@@ -45,12 +47,12 @@
 
   & .section-toc {
     display: block;
-    width: auto;
+    width: 100%;
   }
 
   & .main-content {
     display: block;
-    width: auto;
+    max-width: 100%;
 
     & .title {
       display: block;
