--- a/layouts/partials/scss/real-scss/hugo-code-blocks.scss
+++ b/layouts/partials/scss/real-scss/hugo-code-blocks.scss
@@ -1,20 +1,7 @@
 // sass-lint:disable no-color-literals
-.chroma {
-  background-color: #272822; // Background
-  color: #f8f8f2; // Default text
 
-  display: block;
-  max-width: 10em;
-  overflow: hidden;
-  padding-bottom: 12px;
-
-  &:active,
-  &:hover {
-    overflow-x: scroll;
-    padding-bottom: 0;
-  }
-
-  code {
+@mixin hugo-code-block {
+  & code {
     background-color: $default-pre-background-color;
     color: $default-pre-text-color;
     display: block;
@@ -31,6 +18,25 @@
       }
     }
   }
+}
+
+.chroma {
+  @include hugo-code-block;
+
+  background-color: #272822; // Background
+  color: #f8f8f2; // Default text
+
+  display: block;
+  max-width: 10em;
+  overflow: hidden;
+  padding-bottom: 12px;
+
+  &:active,
+  &:hover {
+    overflow-x: scroll;
+    padding-bottom: 0;
+  }
+
 
   & .err {  //  Error
     background-color: #1e0010;
@@ -283,82 +289,75 @@
   display: block;
   resize: none;
   width: 100%;
-}
 
-@media screen and (min-width: 13em) {
-  .chroma {
-    max-width: 10em;
-  }
-}
+  & > pre {
+    @include hugo-code-block;
 
-@media screen and (min-width: 16em) {
-  .chroma {
-    max-width: 12em;
-  }
-}
+    display: block;
+    max-width: 16em;
+    overflow: hidden;
+    padding-bottom: 12px;
 
-@media screen and (min-width: 24em) {
-  .chroma {
-    max-width: 20em;
-  }
-}
-
-@media screen and (min-width: 30em) {
-  .chroma {
-    max-width: 26em;
-  }
-}
-
-@media screen and (min-width: 36em) {
-  .chroma {
-    max-width: 30em;
+    &:active,
+    &:hover {
+      overflow-x: scroll;
+      padding-bottom: 0;
+    }
   }
 }
 
 @media screen and (min-width: 42em) {
-  .chroma {
-    max-width: 26em;
+  .chroma,
+  .highlight > pre {
+    max-width: 20em;
   }
 }
 
 @media screen and (min-width: 48em) {
-  .chroma {
-    max-width: 29em;
+  .chroma,
+  .highlight > pre {
+    max-width: 24em;
   }
 }
 
 @media screen and (min-width: 56em) {
-  .chroma {
-    max-width: 32em;
+  .chroma,
+  .highlight > pre {
+    max-width: 26em;
   }
 }
 
 @media screen and (min-width: 64em) {
-  .chroma {
-    max-width: 36em;
+  .chroma,
+  .highlight > pre {
+    max-width: 32em;
   }
 }
 
 @media screen and (min-width: 70em) {
-  .chroma {
-    max-width: 40em;
+  .chroma,
+  .highlight > pre {
+    max-width: 38em;
   }
 }
 
 @media screen and (min-width: 76em) {
-  .chroma {
-    max-width: 48em;
+  .chroma,
+  .highlight > pre {
+    max-width: 44em;
   }
 }
 
 @media screen and (min-width: 82em) {
-  .chroma {
-    max-width: 52em;
+  .chroma,
+  .highlight > pre {
+    max-width: 50em;
   }
 }
 
 @media screen and (min-width: 90em) {
-  .chroma {
-    max-width: 60em;
+  .chroma,
+  .highlight > pre {
+    max-width: 56em;
   }
 }
